Tooltips should be of type inline-block so the container is aligned correctly to the button/block.

--- a/scss/partials/_tooltip-v1-0.scss
+++ b/scss/partials/_tooltip-v1-0.scss
@@ -2,7 +2,9 @@
 	.tooltip {
 		$triangle-color: color('tooltip', 'background');
 		
-		position: relative;		
+		position: relative;	
+
+		display: inline-block;	
 
 		&:hover .tooltip__container {
 			display: block;
